# ReelScout

./: .gitignore  Plans.md  README.md  pyproject.toml  reel_scout_cli.py  requirements.txt
.github/workflows/: python-tests.yml  release.yml
memory-bank/: MEMORY.md  Plans.md  activeContext.md  multi-user-plan.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: get_insta_session.py
src/: ai_analyzer.py  downloader.py  instagram_client.py  location_enricher.py  pipeline.py
src/api/: app.py  jobs.py  models.py
src/web/: index.html
tests/: conftest.py  test_ai_analyzer.py  test_downloader.py  test_instagram_client.py  test_location_enricher.py  test_reel_scout_cli.py
