[tool.poetry]
name = "reel-scout"
version = "0.1.0"
description = "Collect and analyze Instagram Reels using AI."
authors = ["Camilo Lozano <camilozano98@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}] # Include the src directory

[tool.poetry.dependencies]
python = "^3.13"
# Dependencies will be added via `poetry add` later
instagrapi = "^2.1.3"
click = "^8.1.8"
pillow = "^11.2.0"
google-generativeai = "^0.8.4"
python-dotenv = "^1.1.0"
pydantic = "2.10.1"
googlemaps = "^4.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"

[tool.poetry.scripts]
reel-scout = "reel_scout_cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
