[tool.poetry]
name = "reel-scout"
version = "0.1.0"
description = "Collect and analyze Instagram Reels using AI."
authors = ["Camilo Lozano <camilozano98@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}] # Include the src directory

[tool.poetry.dependencies]
python = "^3.11"
# Dependencies will be added via `poetry add` later
instagrapi = "^2.3.0"
click = "^8.3.1"
pillow = "^12.1.1"
python-dotenv = "^1.2.1"
pydantic = "2.12.5"
googlemaps = "^4.10.0"
google-genai = "^1.65.0"
fastapi = "^0.134.0"
uvicorn = {extras = ["standard"], version = "^0.41.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-mock = "^3.15.1"

[tool.poetry.scripts]
reel-scout = "reel_scout_cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
