[project]
name = "reel-scout"
version = "0.1.0"
description = "Collect and analyze Instagram Reels using AI."
readme = "README.md"
requires-python = ">=3.11,<4"
license = {text = "MIT"}
authors = [
  {name = "Camilo Lozano", email = "camilozano98@gmail.com"},
]
dependencies = [
  "instagrapi>=2.3.0,<3",
  "click>=8.3.1,<9",
  "pillow>=12.1.1,<13",
  "python-dotenv>=1.2.1,<2",
  "pydantic==2.12.5",
  "googlemaps>=4.10.0,<5",
  "google-genai>=1.65.0,<2",
  "fastapi>=0.134.0,<0.135.0",
  "uvicorn[standard]>=0.41.0,<0.42.0",
]

[project.scripts]
reel-scout = "reel_scout_cli:cli"

[dependency-groups]
dev = [
  "pytest>=9.0.2,<10",
  "pytest-mock>=3.15.1,<4",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"reel_scout_cli.py" = "reel_scout_cli.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/reel_scout_cli.py",
  "/README.md",
  "/pyproject.toml",
]
